<resources>

    <item name="dataTag" type="id" />
    <item name="dataTagString" type="id" />
    <item name="dataTagId" type="id" />
    <item name="dataTag2" type="id" />
    <item name="viewTag" type="id" />

    <string name="app_name">休闲十分</string>
    <string name="HappyArea">开心十分</string>
    <string name="ClassificationMore">更多分类</string>
    <string name="BeautifulCollection">美图大全</string>
    <string name="HDPicture">高清大图</string>
    <string name="funnyPicture">趣图</string>
    <string name="joke">笑话</string>
    <string name="entertainment">娱乐</string>
    <string name="life">生活</string>
    <string name="clothes">服装</string>
    <string name="photo">写真</string>
    <string name="news">新闻</string>
    <string name="star">明星</string>
    <string name="temperament">气质</string>
    <string name="pullLoadMore">点击加载更多</string>
    <string name="loading">正在加载……</string>
    <string name="dropFresh">下拉刷新</string>
    <string name="loadFailed">哎呀，数据跑丢了……</string>
    <string name="refreshFailed">请检查网络后再重试刷新</string>
    <string name="writeIdentifyingCode">请填写验证码</string>
    <string name="clickToChange">点击更换验证码</string>


    <string name="imgAuthor">拍摄者：%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prePage">上一页</string>
    <string name="nextPage">下一页</string>
    <string name="inAtlas">进入图集</string>

    <string name="pageNum">%1$d/%2$d</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>

    <string name="clickToLogin">点击登录</string>
    <string name="userName">用户名</string>
    <string name="userNameRegister">用户名(2-15位数字字母下划线组成)</string>
    <string name="passWord">密码</string>
    <string name="passWordRegister">密码(6-16位数字字母组合)</string>
    <string name="passWordConfirm">确认密码</string>
    <string name="login">登录</string>
    <string name="toRegister">还没有账号？点击注册</string>
    <string name="register">注册</string>
    <string name="menuCollection">收藏</string>
    <string name="menuMusicList">音乐歌单</string>
    <string name="menuSetting">设置</string>
    <string name="menuAbout">关于</string>
    <string name="menuFeedBack">意见反馈</string>
    <string name="jokeCollection">笑话收藏</string>
    <string name="pictureCollection">图片收藏</string>
    <string name="atlasCollection">图集收藏</string>

    <string name="newList">新建歌单</string>
    <string name="toCreateList">您还没有歌单，点击新建歌单进行创建</string>
    <string name="tips">点击歌曲即可%1$s</string>
    <string name="musicMenuName">歌单名称：</string>
    <string name="musicMenuNameHint">请输入歌单名称</string>
    <string name="okButton">确定</string>
    <string name="addButton">添加</string>
    <string name="removeButton">删除</string>
    <string name="addAll">添加全部</string>

    <string name="settingMusicPlayPath">播放歌单</string>
    <string name="settingMusicPlayOrder">播放顺序</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>
