<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_pre_next_rlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/layout_prepage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:text="@string/prePage"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/layout_nextpage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:text="@string/nextPage"
            android:visibility="gone"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/layout_loading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:text="@string/loading"
        android:visibility="gone"/>
</RelativeLayout>