<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.srainbow.leisureten.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_tb"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary500">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/login"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <EditText
                android:id="@+id/login_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:maxLength="10"
                android:maxLines="1"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passWord"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceMedium"
            android:layout_marginTop="26dp"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@color/colorPrimary500"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/login_toregister_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/toRegister"
                android:textColor="@color/colorLight400"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
